spacing change and content block fix

--- a/wp-content/themes/eatshed/src/styles/utilities/_variables.scss
+++ b/wp-content/themes/eatshed/src/styles/utilities/_variables.scss
@@ -85,4 +85,6 @@ $mq-breakpoints: (
     xlarge: 80em
 );
 
+$column-gap: 1rem;
+
 // $mq-show-breakpoints: (xsmall, small, small-major, medium, medium-major, large, xlarge);
